--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" type="image/png" />
+
     <title>Devansh Exports - Premium Granite & Quartz Manufacturer Since 2017</title>
     <meta name="description" content="Devansh Exports delivers premium granite and quartz products with precision cutting and expert polishing. Serving architects, builders, and homeowners across India since 2017." />
     <meta name="author" content="Devansh Exports" />
     <meta name="keywords" content="granite manufacturer, quartz manufacturer, granite supplier India, stone cutting, polishing services, Devansh Exports" />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Devansh Exports - Strength in Every Stone" />
     <meta property="og:description" content="Premium granite and quartz manufacturer since 2017. State-of-the-art manufacturing with 30+ product varieties." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:site" content="@DevanshExports" />
+    <meta name="twitter:image" content="/favicon.png" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
